	PR middle-end/30696 	* ipa-inline.c (cgraph_clone_inlined_nodes): When there are unanalyzed 	nodes in cgraph, don't remove offline copy of the function.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@121582 138bc75d-0d04-0410-961f-82ee72b054a4